[project]
name = "pylandax"
version = "0.1.0"
requires-python = ">=3.11"
description = "Landax client"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests>=2.32.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Make sure to include json files like modules.json
"pylandax" = ["**/*.json"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
