[project]
name = "pylandax"
version = "0.5.0"
description = "Landax client"
authors = [{ name = "David Skoland", email = "david.skoland@asterisk.digital" }]
requires-python = ">=3.11"

readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests>=2.32.5"
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pylandax*"]

[tool.setuptools.package-data]
pylandax = ["**/*.json"]
